--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Как стать дизайнером продукта</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
-    content="C нуля и зарабатывать 145 000₽/мес. Надёжные работодатели и крутые условия. IT-профессия в которой не нужно программировать. Пришлём все исходники после эфира. Закинем большой пак полезностей для лёгкого старта. Бесплатная консультация и траектория развития.">
+    content="Продуктовый дизайн. C нуля и зарабатывать 145 000 ₽/мес. Надёжные работодатели и крутые условия. IT-профессия в которой не нужно программировать. Пришлём все исходники после эфира. Закинем большой пак полезностей для лёгкого старта. Бесплатная консультация и траектория развития.">
 </head>
 
 <body>
