--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/vite.png" />
   <meta charset="UTF-8" />
   <title>Как стать дизайнером продукта</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
